@@ -112,6 +112,20 @@ This extension adds support for `break` and `continue` in loops.  After
 enabling Jinja2 provides those two keywords which work exactly like in
 Python.
 
+.. _with-extension:
+
+With Statement
+--------------
+
+**Import name:** `jinja2.ext.with_`
+
+.. versionadded:: 2.3
+
+This extension adds support for the with keyword.  Using this keyword it
+is possible to enforce a nested scope in a template.  Variables can be
+declared directly in the opening block of the with statement or using a
+standard `set` statement directly within.
+
 
 .. _writing-extensions:
 
