@@ -106,6 +106,18 @@ def test_do():
     assert tmpl.render() == '0f, 1o, 2o'
 
 
+def test_with():
+    env = Environment(extensions=['jinja2.ext.with_'])
+    tmpl = env.from_string('''\
+    {% with a=42, b=23 -%}
+        {{ a }} = {{ b }}
+    {% endwith -%}
+        {{ a }} = {{ b }}\
+    ''')
+    assert [x.strip() for x in tmpl.render(a=1, b=2).splitlines()] \
+        == ['42 = 23', '1 = 2']
+
+
 def test_extension_nodes():
     env = Environment(extensions=[TestExtension])
     tmpl = env.from_string('{% test %}')
